--- a/src/app/qr-dialog/qr-dialog.component.html
+++ b/src/app/qr-dialog/qr-dialog.component.html
@@ -1,9 +1,3 @@
-<!-- <div style="display: flex; flex-direction: column; align-items: center; padding: 32px;">
-    <qrcode [qrdata]="data.employeeId" [width]="20"></qrcode>
-    <div style="margin-top: 16px; font-size: 18px;">Employee ID: {{ data.employeeId }}</div>
-</div> -->
-
-
 <div class="employee-dialog" id="printArea">
   <div class="dialog-header">
     <h3>Employee ID</h3>
@@ -16,7 +10,7 @@
     <div class="left-column">
       <div class="avatar-wrap">
         <div class="avatar-placeholder">
-          <mat-icon>person</mat-icon>
+           <img class="avatar-placeholder" [src]="data.photo">
         </div>
         <div class="name">{{ data.fullName }}</div>
         <div class="role">{{ data.services }}</div>
@@ -32,19 +26,16 @@
     </div>
 
     <div class="right-column">
+      <div class="brand-strip">Homes by ASBL</div>
       <div class="info-card">
-        <div class="info-row"><span class="label">Organisation</span><span class="value">{{ data.organization || 'Springs Helpers' }}</span></div>
+        <div class="info-row"><span class="label">Organisation</span><span class="value">{{ data.organization }}</span></div>
         <div class="info-row"><span class="label">Emp ID</span><span class="value">{{ data.employeeId }}</span></div>
-        <div class="info-row"><span class="label">Phone number</span><span class="value">{{ data.phone || '9090901234' }}</span></div>
-        <div class="info-row"><span class="label">Joined date</span><span class="value">{{ formatDate(data.joinedDate) || '15/06/2025' }}</span></div>
-        <!-- <div class="info-row"><span class="label">Organisation</span><span class="value">{{ 'Springs Helpers' }}</span></div>
-        <div class="info-row"><span class="label">Emp ID</span><span class="value">{{ data.employeeId }}</span></div>
-        <div class="info-row"><span class="label">Phone number</span><span class="value">{{ '9090901234' }}</span></div>
-        <div class="info-row"><span class="label">Joined date</span><span class="value">{{ '15/06/2025' }}</span></div> -->
+        <div class="info-row"><span class="label">Phone number</span><span class="value">{{ data.phone }}</span></div>
+        <div class="info-row"><span class="label">Joined date</span><span class="value">{{ formatDate(data.joinedDate) }}</span></div>
       </div>
 
       <div class="qr-block second">
-        <qrcode [qrdata]="data.employeeId + '-card'" [width]="140"></qrcode>
+        <qrcode [qrdata]="data.employeeId" [width]="140"></qrcode>
         <div class="small-note">Unauthorised usage could be considered a legal offense.</div>
       </div>
     </div>
